--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Reactt sans JSX</h1>
+    <h1>React sans JSX</h1>
     <p>C'est parti</p>
     <hr>
     <div id="app">
